ライセンスバッジ、ライセンスの要件、ロゴを更新した。

--- a/about/index.html
+++ b/about/index.html
@@ -85,18 +85,20 @@
     
   <h1>😄 About</h1>
   <h2 id="-license">📜 License</h2>
-<p><a href="https://github.com/tamadalab/beacher/blob/main/LICENSE"><img src="https://img.shields.io/badge/License-MIT-green" alt="License"></a></p>
+<p><a href="https://github.com/tamadalab/beacher/blob/main/LICENSE"><img src="https://img.shields.io/badge/License-Apache2.0-green.svg" alt="License"></a></p>
 <ul>
 <li>Permissions
 <ul>
 <li>👍 Commercial use</li>
 <li>👍 Modification</li>
 <li>👍 Distribution</li>
+<li>👍 Patent use</li>
 <li>👍 Private use</li>
 </ul>
 </li>
 <li>Limitations
 <ul>
+<li>❌ Trademark use</li>
 <li>❌ Liability</li>
 <li>❌ Warranty</li>
 </ul>
@@ -104,8 +106,7 @@
 </ul>
 <h2 id="logo">Logo</h2>
 <p>The logo of beacher is as follows.</p>
-<p><img src="https://raw.githubusercontent.com/tamadalab/beacher/main/site/static/images/logo.png" alt="beacher_logo"></p>
-<p>This image is refered from <a href="https://freesvg.org/worker-with-tool">freesvg.org</a> by <a href="https://freesvg.org/by/OpenClipart">OpenClipart</a>.</p>
+<p><img src="https://tamadalab.github.io/beacher/images/logo.svg" alt="beacher_logo"></p>
 <h2 id="project-name-beacher">Project Name <code>beacher</code></h2>
 <p><code>beacher</code> is <code>Build Tool MEISTER</code> from its features.</p>
 <h2 id="-developers-">👨‍💼 Developers 👩‍💼</h2>
