--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <a href="https://coveralls.io/github/tamadalab/beacher?branch=main"><img src="https://coveralls.io/repos/github/tamadalab/beacher/badge.svg?branch=main" alt="Coverage Status"></a>
 <a href="https://rust-reportcard.xuri.me/report/github.com/tamadalab/beacher"><img src="https://rust-reportcard.xuri.me/badge/github.com/tamadalab/beacher" alt="Rust Report Card"></a></p>
 <p><a href="https://github.com/tamadalab/beacher/releases/tag/v0.5.0"><img src="https://img.shields.io/badge/Version-v0.5.0-green" alt="Version"></a>
-<a href="https://github.com/tamadalab/beacher/blob/main/LICENSE"><img src="https://img.shields.io/badge/License-MIT-green" alt="License"></a>
+<a href="https://github.com/tamadalab/beacher/blob/main/LICENSE"><img src="https://img.shields.io/badge/License-Apache 2.0-green" alt="License"></a>
 <a href="https://github.com/tamadalab/beacher/pkgs/container/beacher/"><img src="https://img.shields.io/badge/Docker-v0.5.0-green?logo=docker" alt="Docker"></a>
 <a href="https://github.com/tamadalab/homebrew-brew"><img src="https://img.shields.io/badge/Homebrew-tamadalab/brew/beacher-green?logo=homebrew" alt="Homebrew"></a></p>
 <h2 id="-description">🗣 Description</h2>
