Developersを更新した。

--- a/about/index.html
+++ b/about/index.html
@@ -111,7 +111,11 @@
 <p><code>beacher</code> is <code>Build Tool MEISTER</code> from its features.</p>
 <h2 id="-developers-">👨‍💼 Developers 👩‍💼</h2>
 <ul>
-<li><a href="https://tamadalab.github.io/">Haruaki Tamadalab</a> (<a href="https://github.com/tamadalab">@tamadalab</a>)</li>
+<li><a href="https://tamadalab.github.io/">Daisuke Yoshida</a> (<a href="https://github.com/tamadalab">@tamadalab</a>)</li>
+<li><a href="https://tamadalab.github.io/">Jinya Nishi</a> (<a href="https://github.com/tamadalab">@tamadalab</a>)</li>
+<li><a href="https://tamadalab.github.io/">Shun Yamazaki</a> (<a href="https://github.com/tamadalab">@tamadalab</a>)</li>
+<li><a href="https://tamadalab.github.io/">Yoshiaki Kobayashi</a> (<a href="https://github.com/tamadalab">@tamadalab</a>)</li>
+
 </ul>
 
 
