--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 <h1>🏠 beacher</h1>
 
 <a href="https://codebeat.co/projects/github-com-tamadalab-beacher-main"><img alt="codebeat badge" src="https://codebeat.co/badges/c1ac2f53-f01f-4450-b50c-e1c647e79fa9" /></a></p>
+<a href="https://coveralls.io/github/tamadalab/beacher?branch=main"><img src="https://coveralls.io/repos/github/tamadalab/beacher/badge.svg?branch=main" alt="Coverage Status"></a>
 <p><a href="https://github.com/tamadalab/beacher/releases/tag/v0.5.0"><img src="https://img.shields.io/badge/Version-v0.5.0-green" alt="Version"></a>
 <a href="https://github.com/tamadalab/beacher/blob/main/LICENSE"><img src="https://img.shields.io/badge/License-Apache 2.0-green" alt="License"></a>
 <a href="https://github.com/tamadalab/beacher/pkgs/container/beacher/"><img src="https://img.shields.io/badge/Docker-v0.5.0-green?logo=docker" alt="Docker"></a>
